--- a/views/getallplanes.html
+++ b/views/getallplanes.html
@@ -4,8 +4,8 @@
 <head>
   <title>GET all planes</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="fontawesome/css/font-awesome.css">
+  <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../fontawesome/css/font-awesome.css">
 
 </head>
 
@@ -24,12 +24,12 @@
       </thead>
       <tbody></tbody>
     </table>
-    <a class="btn btn-dark" href="index.html"> <i class="fa fa-home"></i> Home</a>
+    <a class="btn btn-dark" href="../index.html"> <i class="fa fa-home"></i> Home</a>
 
   </div>
 
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="js/getplanes.js"></script>
+  <script src="../js/jquery-3.2.1.min.js"></script>
+  <script src="../js/getplanes.js"></script>
 
 </body>
 
