--- a/views/insertplaneform.html
+++ b/views/insertplaneform.html
@@ -4,8 +4,8 @@
 <head>
   <title>POST/insert plane</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="fontawesome/css/font-awesome.css">
+  <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../fontawesome/css/font-awesome.css">
 </head>
 
 <body>
@@ -28,13 +28,13 @@
         <input type="submit" class="btn btn-dark" value="Submit" />
       </div>
     </form>
-    <a class="btn btn-dark" href="index.html"> <i class="fa fa-home"></i> Home</a>
+    <a class="btn btn-dark" href="../index.html"> <i class="fa fa-home"></i> Home</a>
     <a class="btn btn-dark" href="getallplanes.html"> <i class="fa fa-plane"></i> All Planes</a>
 
   </div>
 
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="js/insertplane.js"></script>
+  <script src="../js/jquery-3.2.1.min.js"></script>
+  <script src="../js/insertplane.js"></script>
 </body>
 
 </html>
